--- a/scss/3.layout/_services.scss
+++ b/scss/3.layout/_services.scss
@@ -115,4 +115,17 @@
         }
     }
 
+    .services-footer {
+        display: flex;
+        justify-content: space-around;
+        gap: 100px;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        .services-footer-item {
+            filter: grayscale(1);
+            &:hover {
+                filter: grayscale(0);
+            }
+        }
+    }
 }
